--- a/package.json
+++ b/package.json
@@ -10,22 +10,34 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@pbe/react-yandex-maps": "^1.2.2",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "antd": "^5.0.7",
+    "antd-country-phone-input": "^4.5.0",
+    "classnames": "^2.3.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.0.5",
+    "react-slideshow-image": "^4.1.1",
     "redux-persist": "^6.0.0",
-    "typescript": "4.9.4"
+    "swiper": "^8.4.5",
+    "typescript": "4.9.4",
+    "world_countries_lists": "^2.6.0"
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.2",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "^10.4.13",
+    "i": "^0.3.7",
+    "npm": "^9.2.0",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
   }
