--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.7",
+    "moment": "^2.29.4",
     "next": "13.0.7",
     "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
